# prog_dz

./: .gitignore  README.md
.github/workflows/: lab8-ci.yml
bot_tg/: test_bot.py
hard/: euclid_alg.py  rec_sum.py
lab2/hard/: euclid_alg.py  rec_sum.py
lab2/mid/: calc_simple.py  min_el.py  multip_table.py
lab3/hard/: abc.py
lab3/mid/: book.py  file.py  stat.py
lab4/hard/: memoiz.py  pipeline.py
lab4/mid/: map_sqr.py  num_gen.py  simpl_gen.py
lab5/hard/: drawer.py  pyqt_table.py
lab5/mid/: change_colour.py  hello_button.py  progressbar.py
lab6/hard/: fast_api.py  sqlalchemy_connection.py
lab6/mid/: fast_api_hello.py  jinja.py  jinja_html.py  jinja_txt.py  template.html  test_message.txt
lab7/hard/: async.py  crud.py
lab7/mid/: csv_export.py  games.csv  games.db  queries.py  sqlite_db.py
lab8/: .flake8  pyproject.toml
lab8/l8_project/: pyproject.toml
lab8/src/lab8/: args.py  properties.py
lab8/tests/: test_circle.py
mid/: calc_simple.py  multip_table.py
